--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/argparse"]
 	path = lib/argparse
 	url = https://github.com/NATHAN76543217/argparse.git
+[submodule "lib/libft"]
+	path = lib/libft
+	url = https://github.com/NATHAN76543217/libft.git
