add specific branch to git submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "lib/argparse"]
 	path = lib/argparse
 	url = https://github.com/NATHAN76543217/argparse.git
+	branch = master
 [submodule "lib/libft"]
 	path = lib/libft
 	url = https://github.com/NATHAN76543217/libft.git
+	branch = master
